--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,11 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 28
+
     defaultConfig {
+        ndk {
+            abiFilters 'arm64-v8a', 'armeabi-v7a','x86','x86-64'
+        }
         applicationId "com.alensalihbasic.wreckface"
         minSdkVersion 21
         targetSdkVersion 28
